# CMakeStarterProjectNoTests

./: CMakeLists.txt  README.md
.github/workflows/: BuildRunWithCMakePresets.yml  BuildRunWithCMakePresetsNoMatrix.yml  BuildRunWithoutCMakePresets.yml
StarterProject/hdr/: StarterProject.hpp
StarterProject/src/: MainStarterProject.cpp  StarterProject.cpp
